deploy: 72a77e8b95fc20ec29ea0e97c8458f3af920cea1

--- a/ch01/note02.html
+++ b/ch01/note02.html
@@ -527,7 +527,8 @@ distance traveled in 1 second (hz).</p></li>
 <li><p>From the equipartition principle of thermodynamics each oscillator has <span class="math notranslate nohighlight">\(k_BT\)</span> of energy. Thus the intensity of radiation, according to classical mechanics, is <span class="math notranslate nohighlight">\(I \sim k_B T \nu^2\)</span>. Intensity increases to infinity at high <span class="math notranslate nohighlight">\(\nu\)</span> (or low <span class="math notranslate nohighlight">\(\lambda\)</span>). This is known as the ultraviolet catastrophe!</p></li>
 </ul>
 <div class="tip dropdown admonition">
-<p class="admonition-title">Quiz: What is the problem with classical mechanical explanation of black body radiation?</p>
+<p class="admonition-title">Quiz</p>
+<p><strong>What is the problem with classical mechanical explanation of black body radiation?</strong></p>
 <ol class="arabic simple">
 <li><p>It is not corectly applied.</p></li>
 <li><p>CM makes some uncontrolled approximations about energy.</p></li>
