--- a/cookbook.html
+++ b/cookbook.html
@@ -491,7 +491,7 @@ document.write(`
     <span class="k">return</span> <span class="n">h</span><span class="o">/</span><span class="p">(</span><span class="n">mass</span> <span class="o">*</span> <span class="n">v</span><span class="p">)</span>
 
 <span class="c1">#Compute</span>
-<span class="nb">print</span><span class="p">(</span> <span class="n">deb_wavl</span><span class="p">(</span><span class="n">v</span><span class="o">=</span><span class="mf">1e5</span><span class="p">)</span> <span class="p">)</span>
+<span class="nb">print</span><span class="p">(</span><span class="s1">&#39;Wavelength of electron traveling with speed $10^5$ m/s is &#39;</span> <span class="n">deb_wavl</span><span class="p">(</span><span class="n">v</span><span class="o">=</span><span class="mf">1e5</span><span class="p">)</span> <span class="p">)</span>
 
 <span class="c1"># Plot</span>
 <span class="n">v</span><span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">linspace</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="mf">1e10</span><span class="p">)</span>
