--- a/ch01/note04.html
+++ b/ch01/note04.html
@@ -608,10 +608,10 @@ Solution<div class="sd-summary-down docutils">
 <div class="sd-summary-up docutils">
 <svg version="1.1" width="1.5em" height="1.5em" class="sd-octicon sd-octicon-chevron-up" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M18.78 15.28a.75.75 0 000-1.06l-6.25-6.25a.75.75 0 00-1.06 0l-6.25 6.25a.75.75 0 101.06 1.06L12 9.56l5.72 5.72a.75.75 0 001.06 0z"></path></svg></div>
 </summary><div class="sd-summary-content sd-card-body docutils">
-<ul class="simple">
-<li><p class="sd-card-text">A</p></li>
-<li><p class="sd-card-text">B</p></li>
-</ul>
+<p class="sd-card-text"><strong>A.</strong>  We will use the Bohr’s formula in units of electron <span class="math notranslate nohighlight">\(E_n = -19.6 \frac{1}{n^}\)</span> to calculate energy of a photon.</p>
+<div class="math notranslate nohighlight">
+\[\Delta E = 19.6  \Big ( \frac{1}{1^2} - \frac{1}{4^2} \Big) = 19.6 \cdot 0.9375 = 18.375\,\, ev\]</div>
+<p class="sd-card-text"><strong>B.</strong> Energy of a photon goes up as we excite electron to higher and higher level. As <span class="math notranslate nohighlight">\(n_2\rightarrow \infty\)</span> we end up with a photon that has sufficient energy to ionize the atom. <span class="math notranslate nohighlight">\(E = 19.6 \cdot ( \frac{1}{1^2} - \frac{1}{\infty} \Big) = 19.6 ev\)</span></p>
 </div>
 </details></section>
 <section id="problem-3">
