deploy: a4c0058eff7b1b3d8f641c58ab99d4935031b71d

--- a/ch03/note02.html
+++ b/ch03/note02.html
@@ -35,8 +35,8 @@
     <link rel="stylesheet" type="text/css" href="../_static/copybutton.css" />
     <link rel="stylesheet" type="text/css" href="../_static/mystnb.4510f1fc1dee50b3e5859aac5469c37c29e427902b24a333a5f9fcb2f0b3ac41.css" />
     <link rel="stylesheet" type="text/css" href="../_static/sphinx-thebe.css" />
-    <link rel="stylesheet" type="text/css" href="../_static/base.css" />
     <link rel="stylesheet" type="text/css" href="../_static/custom.css" />
+    <link rel="stylesheet" type="text/css" href="../_static/base.css" />
     <link rel="stylesheet" type="text/css" href="../_static/design-style.4045f2051d55cab465a707391d5b2007.min.css" />
   
   <!-- Pre-loaded scripts that we'll load fully later -->
@@ -650,7 +650,7 @@ $<span class="math notranslate nohighlight">\(p(x)=\psi(x) \cdot \psi^{*}(x)\)</
 <li><p>Obtaining and normalizing wavefunctions we completed solution of Schrodinger equation as an eigenfunction eigenvalue problem <span class="math notranslate nohighlight">\(\hat{H}\psi_n = E_n \psi_n\)</span></p></li>
 </ul>
 <div class="math notranslate nohighlight">
-\[\boxed{\psi_n(x) = \Big (\frac{2}{L}\Big)^{\frac{1}{2}} \sin\frac{n\pi x}{a}}\]</div>
+\[\boxed{\psi_n(x) = \Big (\frac{2}{L}\Big)^{\frac{1}{2}} \sin\frac{n\pi x}{L}}\]</div>
 <div class="math notranslate nohighlight">
 \[\boxed{E_n=\frac{n^2 h^2}{8mL^2}}\]</div>
 </section>
