deploy: 1d2b1dad8316165d77cc99ff9372ea77cd5ae058

--- a/ch03/note02B.html
+++ b/ch03/note02B.html
@@ -35,8 +35,8 @@
     <link rel="stylesheet" type="text/css" href="../_static/copybutton.css" />
     <link rel="stylesheet" type="text/css" href="../_static/mystnb.4510f1fc1dee50b3e5859aac5469c37c29e427902b24a333a5f9fcb2f0b3ac41.css" />
     <link rel="stylesheet" type="text/css" href="../_static/sphinx-thebe.css" />
-    <link rel="stylesheet" type="text/css" href="../_static/custom.css" />
     <link rel="stylesheet" type="text/css" href="../_static/base.css" />
+    <link rel="stylesheet" type="text/css" href="../_static/custom.css" />
     <link rel="stylesheet" type="text/css" href="../_static/design-style.4045f2051d55cab465a707391d5b2007.min.css" />
   
   <!-- Pre-loaded scripts that we'll load fully later -->
@@ -509,97 +509,95 @@ document.write(`
 <table class="table">
 <thead>
 <tr class="row-odd"><th class="head"><p>Quantum Numbers $( n_x, n_y, n_z $)</p></th>
-<th class="head"><p>Energy <span class="math notranslate nohighlight">\(\( E_{n_x, n_y, n_z} \)\)</span></p></th>
+<th class="head"><p>Energy <span class="math notranslate nohighlight">\(( E_{n_x, n_y, n_z} )\)</span></p></th>
 <th class="head"><p>Degeneracy</p></th>
 </tr>
 </thead>
 <tbody>
 <tr class="row-even"><td><p>(1,1,1)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{3\hbar^2}{2mL^2} \)  \)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{3\hbar^2}{2mL^2} )  \)</span></p></td>
 <td><p>1</p></td>
 </tr>
 <tr class="row-odd"><td><p>(1,1,2), (1,2,1), (2,1,1)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{6\hbar^2}{2mL^2} \)  \)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{6\hbar^2}{2mL^2} )  \)</span></p></td>
 <td><p>3</p></td>
 </tr>
 <tr class="row-even"><td><p>(1,1,3), (1,3,1), (3,1,1)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{11\hbar^2}{2mL^2} \) \)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{11\hbar^2}{2mL^2} ) \)</span></p></td>
 <td><p>3</p></td>
 </tr>
 <tr class="row-odd"><td><p>(1,2,2), (2,1,2), (2,2,1)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{9\hbar^2}{2mL^2} \)  \)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{9\hbar^2}{2mL^2} )  \)</span></p></td>
 <td><p>3</p></td>
 </tr>
 <tr class="row-even"><td><p>(1,2,3), (1,3,2), (2,1,3), (2,3,1), (3,1,2), (3,2,1)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{14\hbar^2}{2mL^2} \)\)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{14\hbar^2}{2mL^2} )\)</span></p></td>
 <td><p>6</p></td>
 </tr>
 <tr class="row-odd"><td><p>(1,3,3), (3,1,3), (3,3,1)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{19\hbar^2}{2mL^2} \)\)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{19\hbar^2}{2mL^2} )\)</span></p></td>
 <td><p>3</p></td>
 </tr>
 <tr class="row-even"><td><p>(2,2,2)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{12\hbar^2}{2mL^2} \)\)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{12\hbar^2}{2mL^2} )\)</span></p></td>
 <td><p>1</p></td>
 </tr>
 <tr class="row-odd"><td><p>(2,2,3), (2,3,2), (3,2,2)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{17\hbar^2}{2mL^2} \)\)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{17\hbar^2}{2mL^2} )\)</span></p></td>
 <td><p>3</p></td>
 </tr>
 <tr class="row-even"><td><p>(2,3,3), (3,2,3), (3,3,2)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{22\hbar^2}{2mL^2} \)\)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{22\hbar^2}{2mL^2} )\)</span></p></td>
 <td><p>3</p></td>
 </tr>
 <tr class="row-odd"><td><p>(3,3,3)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{27\hbar^2}{2mL^2} \)\)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{27\hbar^2}{2mL^2} )\)</span></p></td>
 <td><p>1</p></td>
 </tr>
 <tr class="row-even"><td><p>(1,1,4), (1,4,1), (4,1,1)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{18\hbar^2}{2mL^2} \)\)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{18\hbar^2}{2mL^2} )\)</span></p></td>
 <td><p>3</p></td>
 </tr>
 <tr class="row-odd"><td><p>(1,2,4), (1,4,2), (2,1,4), (2,4,1), (4,1,2), (4,2,1)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{21\hbar^2}{2mL^2} \)\)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{21\hbar^2}{2mL^2} )\)</span></p></td>
 <td><p>6</p></td>
 </tr>
 <tr class="row-even"><td><p>(1,3,4), (1,4,3), (3,1,4), (3,4,1), (4,1,3), (4,3,1)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{26\hbar^2}{2mL^2} \)\)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{26\hbar^2}{2mL^2} )\)</span></p></td>
 <td><p>6</p></td>
 </tr>
 <tr class="row-odd"><td><p>(1,4,4), (4,1,4), (4,4,1)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{33\hbar^2}{2mL^2} \)\)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{33\hbar^2}{2mL^2} )\)</span></p></td>
 <td><p>3</p></td>
 </tr>
 <tr class="row-even"><td><p>(2,2,4), (2,4,2), (4,2,2)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{24\hbar^2}{2mL^2} \)\)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{24\hbar^2}{2mL^2} )\)</span></p></td>
 <td><p>3</p></td>
 </tr>
 <tr class="row-odd"><td><p>(2,3,4), (2,4,3), (3,2,4), (3,4,2), (4,2,3), (4,3,2)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{29\hbar^2}{2mL^2} \)\)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{29\hbar^2}{2mL^2} )\)</span></p></td>
 <td><p>6</p></td>
 </tr>
 <tr class="row-even"><td><p>(2,4,4), (4,2,4), (4,4,2)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{36\hbar^2}{2mL^2} \)\)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{36\hbar^2}{2mL^2} )\)</span></p></td>
 <td><p>3</p></td>
 </tr>
 <tr class="row-odd"><td><p>(3,3,4), (3,4,3), (4,3,3)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{34\hbar^2}{2mL^2} \)\)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{34\hbar^2}{2mL^2} )\)</span></p></td>
 <td><p>3</p></td>
 </tr>
 <tr class="row-even"><td><p>(3,4,4), (4,3,4), (4,4,3)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{39\hbar^2}{2mL^2} \)\)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{39\hbar^2}{2mL^2} )\)</span></p></td>
 <td><p>3</p></td>
 </tr>
 <tr class="row-odd"><td><p>(4,4,4)</p></td>
-<td><p><span class="math notranslate nohighlight">\(\( \frac{48\hbar^2}{2mL^2} \)\)</span></p></td>
+<td><p><span class="math notranslate nohighlight">\(( \frac{48\hbar^2}{2mL^2} )\)</span></p></td>
 <td><p>1</p></td>
 </tr>
 </tbody>
 </table>
-<div class="admonition-example admonition">
-<p class="admonition-title">Example:</p>
-<p>Consider an electron in superfluid helium (<span class="math notranslate nohighlight">\(^4\)</span>He) where it forms a solvation cavity with a radius of 18 \AA. Calculate the zero-point energy and the energy difference between the ground and first excited states by approximating the electron by a particle in a 3-dimensional box.
-:class: tip, dropdown</p>
+<div class="tip dropdown admonition">
+<p class="admonition-title">Example: Consider an electron in superfluid helium (<span class="math notranslate nohighlight">\(^4\)</span>He) where it forms a solvation cavity with a radius of 18 \AA. Calculate the zero-point energy and the energy difference between the ground and first excited states by approximating the electron by a particle in a 3-dimensional box.</p>
 <p><strong>Solution</strong> The zero-point energy can be obtained from the lowest state energy (e.g. <span class="math notranslate nohighlight">\(n = 1\)</span>) with <span class="math notranslate nohighlight">\(a = b = c = 36\)</span> \AA. The first excited state is triply degenerate (<span class="math notranslate nohighlight">\(E_{112}, E_{121}\)</span> and <span class="math notranslate nohighlight">\(E_{211}\)</span>). Use Eq. (\ref{eq9.87}):</p>
 <div class="math notranslate nohighlight">
 \[E_{111} = \frac{h^2}{8m_e}\left(\frac{n_x^2}{a^2} + \frac{n_y^2}{b^2} + \frac{n_z^2}{c^2}\right)\]</div>
