deploy: 4ac1818bab20936a6600062d948358f421cdf5f0

--- a/ch03/note05.html
+++ b/ch03/note05.html
@@ -506,7 +506,7 @@ document.write(`
 </thead>
 <tbody>
 <tr class="row-even"><td class="text-center"><p><strong>Ket:</strong> <span class="math notranslate nohighlight">\(\mid a \rangle =(a_1,a_2,..) \,\,\,\,\,\)</span> <br>Example: <span class="math notranslate nohighlight">\(\mid a \rangle =(1, 2i)\)</span></p></td>
-<td class="text-center"><p><strong>Ket:</strong> <span class="math notranslate nohighlight">\(\mid \psi\rangle=\psi\)</span><span class="math notranslate nohighlight">\(&lt;br&gt; Example: \)</span>\mid \psi \rangle=ix^2$</p></td>
+<td class="text-center"><p><strong>Ket:</strong> <span class="math notranslate nohighlight">\(\mid \psi\rangle=\psi\)</span><br> Example: <span class="math notranslate nohighlight">\(\mid \psi \rangle=ix^2\)</span></p></td>
 </tr>
 <tr class="row-odd"><td class="text-center"><p><strong>Bra:</strong><span class="math notranslate nohighlight">\(\bra{a} = \begin{pmatrix}a_1 \\ a_2 \\  ...\\ \end{pmatrix}\)</span> <br> <span class="math notranslate nohighlight">\(\bra{a} =\begin{pmatrix} 1 \\ -2i \\ \end{pmatrix}\)</span>$</p></td>
 <td class="text-center"><p><strong>Bra:</strong> <span class="math notranslate nohighlight">\(\langle \psi \mid=\psi^*\)</span><br>  <span class="math notranslate nohighlight">\(\langle \psi \mid = -ix^2\)</span></p></td>
@@ -514,8 +514,8 @@ document.write(`
 <tr class="row-even"><td class="text-center"><p><span class="math notranslate nohighlight">\(\langle a \mid b \rangle = \sum_i a_i b_i\)</span></p></td>
 <td class="text-center"><p><span class="math notranslate nohighlight">\(\langle \phi \mid \psi \rangle = \int  \phi(x)^* \psi(x) dx\)</span></p></td>
 </tr>
-<tr class="row-odd"><td class="text-center"><p>Example of Bra-Ket product for vectors in terms of components <br><span class="math notranslate nohighlight">\(\langle a \mid a \rangle = \sum_i a^2_i\)</span><br> $<span class="math notranslate nohighlight">\(\langle a \mid a \rangle=(1)(1)+(2i)(-2i)=5\)</span></p></td>
-<td class="text-center"><p>Example of Bra-Ket product for functions in terms of components<br><span class="math notranslate nohighlight">\(\langle \psi \mid \psi \rangle = \int \mid \psi(x) \mid^2 dx\)</span><br> <span class="math notranslate nohighlight">\(\langle \psi \mid \psi \rangle = \int^L_0 (ix^2)(-ix^2) dx=\frac{L^5}{5}\)</span></p></td>
+<tr class="row-odd"><td class="text-center"><p>Example: <br> <span class="math notranslate nohighlight">\(\langle a \mid a \rangle = \sum_i a^2_i\)</span><br> <span class="math notranslate nohighlight">\(\langle a \mid a \rangle=(1)(1)+(2i)(-2i)=5\)</span></p></td>
+<td class="text-center"><p>Example: <br> <span class="math notranslate nohighlight">\(\langle \psi \mid \psi \rangle = \int \mid \psi(x) \mid^2 dx\)</span><br> <span class="math notranslate nohighlight">\(\langle \psi \mid \psi \rangle = \int^L_0 (ix^2)(-ix^2) dx=\frac{L^5}{5}\)</span></p></td>
 </tr>
 </tbody>
 </table>
