deploy: 67ee4b18e00eff5d8e7875d90b99033e9436474d

--- a/ch04/note03B.html
+++ b/ch04/note03B.html
@@ -488,11 +488,9 @@ document.write(`
 <li><p><strong>part a</strong></p></li>
 </ul>
 <div class="math notranslate nohighlight">
-\[\omega = 2\pi \nu = \Big(\frac{k}{\mu}\Big)^{1/2}\]</div>
+\[\omega = 2\pi \nu = \frac{2\pi c}{\lambda} =\Big(\frac{k}{\mu}\Big)^{1/2}\]</div>
 <div class="math notranslate nohighlight">
-\[\Delta E = h\nu = \frac{hc}{\lambda}=\hbar \Big(\frac{k}{\mu}\Big)^{1/2}\]</div>
-<div class="math notranslate nohighlight">
-\[k = 4\pi^2 \Big(\frac{c}{\lambda}\Big)^2=516 N \cdot m^{-1}\]</div>
+\[k = \Big(\frac{2\pi c}{\lambda}\Big)^2\mu=516 N \cdot m^{-1}\]</div>
 <ul class="simple">
 <li><p><strong>part b</strong></p></li>
 </ul>
