deploy: 2a2297f57dd8fb62b6f0aad0d8f01a08d5072ee8

--- a/ch04/note03B.html
+++ b/ch04/note03B.html
@@ -472,13 +472,13 @@ document.write(`
 \[{\tilde{E}_v = \frac{E_v}{hc} = \tilde{\nu}\left(v + \frac{1}{2}\right)}\]</div>
 <ul class="simple">
 <li><p><strong>The vibrational quantum number</strong> is denoted as <span class="math notranslate nohighlight">\(v\)</span></p></li>
-<li><p><strong>The vibrational frequency</strong> expressed in wavenumber units <span class="math notranslate nohighlight">\(cm^{-1}\)</span> units is <span class="math notranslate nohighlight">\(\tilde{\nu} = \frac{1}{2\pic}\sqrt{k/\mu}\)</span></p></li>
+<li><p><strong>The vibrational frequency</strong> expressed in wavenumber units <span class="math notranslate nohighlight">\(cm^{-1}\)</span> units is <span class="math notranslate nohighlight">\(\tilde{\nu} = \frac{1}{2\pi c}\sqrt{k/\mu}\)</span></p></li>
 <li><p><strong>Reduced mass of the diatomic molecule</strong> <span class="math notranslate nohighlight">\(\mu\)</span>.</p></li>
 <li><p>Note that <span class="math notranslate nohighlight">\(v\)</span> and <span class="math notranslate nohighlight">\(\nu\)</span> look very similar but have different meaning!  A typical value for vibrational frequency would be around  <span class="math notranslate nohighlight">\(500 - 4000cm^{-1}\)</span>. Small values are associated with weak bonds whereas strong bonds have larger vibrational frequencies.</p></li>
 </ul>
 <div class="note admonition">
 <p class="admonition-title"><strong>Example</strong></p>
-<p>A strong absorption of infrared radiation is observed for <span class="math notranslate nohighlight">\(1H^{35}Cl\)</span> at <span class="math notranslate nohighlight">\(2991 cm{-1}\)</span>.</p>
+<p>A strong absorption of infrared radiation is observed for <span class="math notranslate nohighlight">\(^1H^{35}Cl\)</span> at <span class="math notranslate nohighlight">\(2991 cm{-1}\)</span>.</p>
 <ul class="simple">
 <li><p>Calculate the force constant k for this molecule</p></li>
 <li><p>By what factor do you expect this frequency to shift if deuterium is substituted for hydrogen in this molecule? The force constant is unaffected by this substitution.</p></li>
