deploy: 295180ba6290cd5fd08c1f230528123db172c9f7

--- a/ch04/note03B.html
+++ b/ch04/note03B.html
@@ -639,7 +639,7 @@ Symmetry considerations, especially in molecules, come from group theory, which 
 <li><p>Next we integrate over the vibrational degrees of freedom and obtain:</p></li>
 </ul>
 <div class="math notranslate nohighlight">
-\[\begin{split}{\int\psi^*_{v''}\mu_0\psi_{v'}dR = \mu_e\int\psi^*_{v''}\psi_{v'}dR + \left(\frac{\partial\mu}{\partial R}\right)_{R = R_e}\int\psi_{v''}^*(R - R_e)\psi_{v'}dR\hspace*{0.1cm}}\\
+\[\begin{split}{\int\psi^*_{v''}\mu_0\psi_{v'}dR = \mu_e\int\psi^*_{v''}\psi_{v'}dR + \left(\frac{\partial\mu}{\partial R}\right)_{R = R_e}\int\psi_{v''}^*(R - R_e)\psi_{v'}dR}\\
 { + \frac{1}{2}\left(\frac{\partial^2\mu}{\partial R^2}\right)_{R = R_e}\int\psi_{v''}^*(R - R_e)^2\psi_{v'}dR + ...}\end{split}\]</div>
 <ul class="simple">
 <li><p>The first term above is zero since the vibrational eigenfunctions are orthogonal. The second term is nonzero if the dipole moment depends on the internuclear distance <span class="math notranslate nohighlight">\(R\)</span>. Therefore we conclude that the selection rule for pure vibrational transition is that the dipole moment must change as a function of <span class="math notranslate nohighlight">\(R\)</span>.</p></li>
