--- a/ch04/note03B.html
+++ b/ch04/note03B.html
@@ -484,7 +484,7 @@ document.write(`
 <li><p>By what factor do you expect this frequency to shift if deuterium is substituted for hydrogen in this molecule? The force constant is unaffected by this substitution.</p></li>
 </ul>
 </div>
-<div class="admonition-solution admonition">
+<div class="dropdown admonition">
 <p class="admonition-title"><strong>Solution</strong></p>
 <ul class="simple">
 <li><p><strong>part a</strong></p></li>
