deploy: 9acf828884ef1495fb1e440a27e7f8299228d182

--- a/ch04/note04B.html
+++ b/ch04/note04B.html
@@ -525,7 +525,7 @@ E_J = \frac{\hbar^2}{2I}J(J+1)=BJ(J+1) \,\,\, with\,\,\, g_j=2J+1 \,\,\, degener
 <p class="admonition-title"><strong>Example</strong></p>
 <p>What are the reduced mass and moment of inertia of <span class="math notranslate nohighlight">\(H^{35}Cl\)</span>? The equilibrium internuclear distance <span class="math notranslate nohighlight">\(R_e\)</span> is 127.5 pm. What are the values of <span class="math notranslate nohighlight">\(L, L_z\)</span> and <span class="math notranslate nohighlight">\(E\)</span> for the state with <span class="math notranslate nohighlight">\(J = 1\)</span>? The atomic masses are: <span class="math notranslate nohighlight">\(m_H = 1.673470 \cdot 10^{-27}\)</span> kg and <span class="math notranslate nohighlight">\(m_{Cl} = 5.806496 \cdot 10^{-26}\)</span> kg.</p>
 </div>
-<div class="note admonition">
+<div class="note dropdown admonition">
 <p class="admonition-title"><strong>Solution</strong></p>
 <p>First we calculate the reduced mass:</p>
 <div class="math notranslate nohighlight">
@@ -568,7 +568,7 @@ E_J = \frac{\hbar^2}{2I}J(J+1)=BJ(J+1) \,\,\, with\,\,\, g_j=2J+1 \,\,\, degener
 When the molecule is in electronic state <span class="math notranslate nohighlight">\(e\)</span> and vibrational state <span class="math notranslate nohighlight">\(v\)</span>, the total wavefunction is written as <span class="math notranslate nohighlight">\(\psi = \psi_e\psi_v\psi_{J,M}\)</span>. The <strong>transition moment</strong> between two different rotational levels <span class="math notranslate nohighlight">\(J,M\)</span> and <span class="math notranslate nohighlight">\(J',M'\)</span>:</p>
 <div class="math notranslate nohighlight">
 \[{\int\int\int\psi_e^*\psi_v^*\psi_{J',M'}\hat{\mu}\psi_e\psi_v\psi_{J,M}d\tau_ed\tau_{rot}d\tau_{vib}}\]</div>
-<p>where <span class="math notranslate nohighlight">\(\hat{\mu}\)</span> is the transition dipole operator (see Eq. (\ref{eq11.80})) and only the rotational wavefunction has change. The electronic part gives the permanent dipole moment:</p>
+<p>where <span class="math notranslate nohighlight">\(\hat{\mu}\)</span> is the transition dipole operator and only the rotational wavefunction has change. The electronic part gives the permanent dipole moment:</p>
 <div class="math notranslate nohighlight">
 \[{\mu_0^{(e)} = \int\psi_e^*\hat{\mu}\psi_ed\tau_e}\]</div>
 <p>Therefore we can reduce the last equation to:</p>
