deploy: be38d003a0c63cda0fecdc094a0d2e4b20c04199

--- a/ch04/note04A.html
+++ b/ch04/note04A.html
@@ -554,11 +554,11 @@ p_x &amp; p_y &amp; p_z\\
 <p>Since we are going to work in spherical coordinate system we need to know how operators look in differnet cooridnate systems</p>
 <p><strong>Geometric relations</strong></p>
 <div class="math notranslate nohighlight">
-\[x=rsin\theta cos\phi\]</div>
+\[x=\orange{r}\blue{sin\theta} \green{cos\phi}\]</div>
 <div class="math notranslate nohighlight">
-\[y=rsin\theta sin\phi\]</div>
+\[y=\orange{r}\blue{sin\theta}  \green{cos\phi}\]</div>
 <div class="math notranslate nohighlight">
-\[z=cos\theta\]</div>
+\[z=\orange{r} \green{cos\theta}\]</div>
 <p><strong>The range of spherical variables</strong></p>
 <div class="math notranslate nohighlight">
 \[Radius:\,\,\,0&lt;r&lt;\infty\]</div>
