deploy: 7a82d580e137861e61028b7a4dcccb2533fd9905

--- a/ch04/note04A.html
+++ b/ch04/note04A.html
@@ -554,7 +554,7 @@ p_x &amp; p_y &amp; p_z\\
 <p>Since we are going to work in spherical coordinate system we need to know how operators look in differnet cooridnate systems</p>
 <p><strong>Geometric relations</strong></p>
 <div class="math notranslate nohighlight">
-\[x=\orange{r}\blue{sin\theta} \green{cos\phi}\]</div>
+\[x=\color{orange}{r}\color{blue}{sin\theta} \green{cos\phi}\]</div>
 <div class="math notranslate nohighlight">
 \[y=\orange{r}\blue{sin\theta}  \green{cos\phi}\]</div>
 <div class="math notranslate nohighlight">
@@ -571,17 +571,6 @@ p_x &amp; p_y &amp; p_z\\
 \[
 dV = r^2 \sin \theta \, dr \, d\theta \, d\phi
 \]</div>
-<div class="note admonition">
-<p class="admonition-title"><strong>Example</strong></p>
-<p>Compute volume of cube and sphere using cartesian and spherical cooridnates by integrating volume elements</p>
-</div>
-<div class="note dropdown admonition">
-<p class="admonition-title"><strong>Solution</strong></p>
-<div class="math notranslate nohighlight">
-\[\int^a_0\int^b_0\int^c_0 dxdydz=a\cdot b\cdot c\]</div>
-<div class="math notranslate nohighlight">
-\[\int^r_0\int^{2\pi}_0\int^\pi_0 r^2 \sin \theta \, dr \, d\theta \, d\phi=\frac{r^3}{3}\Big|^r_0 \cdot 2\pi \cdot (-cos\theta) \Big|^\pi_0\cdot 2\pi=\frac{4\pi r^3}{3}\]</div>
-</div>
 <p><strong>Laplacian</strong></p>
 <div class="sd-tab-set docutils">
 <input checked="checked" id="sd-tab-item-0" name="sd-tab-set-0" type="radio">
@@ -600,6 +589,17 @@ Polar</label><div class="sd-tab-content docutils">
 \nabla^2 = \frac{1}{{r^2}} \frac{{\partial}}{{\partial r}} \left(r^2 \frac{{\partial}}{{\partial r}}\right) + \frac{1}{{r^2 \sin(\phi)}} \frac{{\partial}}{{\partial \theta}} \left(\sin(\phi) \frac{{\partial}}{{\partial \theta}}\right) + \frac{1}{{r^2 \sin^2(\phi)}} \frac{{\partial^2}}{{\partial \phi^2}}
 \]</div>
 </div>
+</div>
+<div class="note admonition">
+<p class="admonition-title"><strong>Example</strong></p>
+<p>Compute volume of cube and sphere using cartesian and spherical cooridnates by integrating volume elements</p>
+</div>
+<div class="note dropdown admonition">
+<p class="admonition-title"><strong>Solution</strong></p>
+<div class="math notranslate nohighlight">
+\[\int^a_0\int^b_0\int^c_0 dxdydz=a\cdot b\cdot c\]</div>
+<div class="math notranslate nohighlight">
+\[\int^r_0\int^{2\pi}_0\int^\pi_0 r^2 \sin \theta \, dr \, d\theta \, d\phi=\frac{r^3}{3}\Big|^r_0 \cdot 2\pi \cdot (-cos\theta) \Big|^\pi_0\cdot 2\pi=\frac{4\pi r^3}{3}\]</div>
 </div>
 </section>
 <section id="quantum-angular-momentum">
