deploy: 6a72c2319b087a782f3ff23cfe0908551471a1de

--- a/ch07/note02.html
+++ b/ch07/note02.html
@@ -477,7 +477,7 @@ document.write(`
 <li><p>A generalization of antisimmetric wavefunctions for N electrons was proposed by Slater in 1929:</p></li>
 </ul>
 <div class="math notranslate nohighlight">
-\[\begin{split}{\hspace*{-0.4cm}
+\[\begin{split}{
 \psi(r_1,...,r_n) = \frac{1}{\sqrt{n!}}
 \begin{vmatrix}
 1s(1)\alpha(1) &amp; 1s(1)\beta(1) &amp; 2s(1)\alpha(1) &amp; ... \\
